--- a/src/index.css
+++ b/src/index.css
@@ -190,6 +190,7 @@
     line-height: inherit;
     overscroll-behavior: none; /* Previene il bounce effect su tutta la pagina */
     overflow: hidden; /* Impedisce lo scroll del body */
+    position: fixed; /* Blocca il body */
   }
 
   hr {
